; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_verify-commit.c_run_gpg_verify.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_verify-commit.c_run_gpg_verify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }
%struct.signature_check = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.commit*, i32)* @run_gpg_verify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run_gpg_verify(%struct.commit* %0, i32 %1) #0 {
  %3 = alloca %struct.commit*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.signature_check, align 4
  %6 = alloca i32, align 4
  store %struct.commit* %0, %struct.commit** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32 @memset(%struct.signature_check* %5, i32 0, i32 4)
  %8 = load %struct.commit*, %struct.commit** %3, align 8
  %9 = call i32 @check_commit_signature(%struct.commit* %8, %struct.signature_check* %5)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @print_signature_buffer(%struct.signature_check* %5, i32 %10)
  %12 = call i32 @signature_check_clear(%struct.signature_check* %5)
  %13 = load i32, i32* %6, align 4
  ret i32 %13
}

declare dso_local i32 @memset(%struct.signature_check*, i32, i32) #1

declare dso_local i32 @check_commit_signature(%struct.commit*, %struct.signature_check*) #1

declare dso_local i32 @print_signature_buffer(%struct.signature_check*, i32) #1

declare dso_local i32 @signature_check_clear(%struct.signature_check*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
